--- a/login/package.json
+++ b/login/package.json
@@ -2,7 +2,7 @@
   "name": "register",
   "version": "1.0.0",
   "main": "index.js",
-  "types": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
